# frida-imgui-android

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  package-lock.json  package.json  push.sh
src/: RendererWrapper.ts  index.ts  util.ts
src/cpp/: main.cpp
src/cpp/imgui/: imgui_impl_android.cpp  imgui_impl_android.h
src/java/me/maars/: MyGLRenderer.java  MyGLSurfaceView.java
